<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="startFragment"
            type="com.vainpower.strider.StartFragment" />

        <variable
            name="viewModel"
            type="com.vainpower.strider.model.PaceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startFragement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartFragment">

        <EditText
            android:id="@+id/Pace"
            android:layout_width="74dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:selectAllOnFocus="true"
            android:ems="10"
            android:hint="@string/pace"
            android:inputType="number"
            android:text="@{viewModel.paces.toString()}"
            android:afterTextChanged="@{(text) -> viewModel.setPaces(text)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfigMessage"
            tools:text="43" />

        <EditText
            android:id="@+id/PaceDistance"
            android:layout_width="103dp"
            android:layout_height="48dp"
            android:layout_marginTop="22dp"
            android:selectAllOnFocus="true"
            android:ems="10"
            android:hint="@string/distance"
            android:inputType="number"
            android:text="@{viewModel.paceDistance.toString()}"
            android:afterTextChanged="@{(text) -> viewModel.setPacesDistance(text)}"
            app:layout_constraintEnd_toStartOf="@+id/PaceUnit"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toEndOf="@+id/Pace"
            app:layout_constraintTop_toBottomOf="@+id/ConfigMessage" />

        <Spinner
            android:id="@+id/PaceUnit"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfigMessage" />

        <TextView
            android:id="@+id/ConfigMessage"
            android:layout_width="376dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:text="@string/configure_pace"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TargetDistanceMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="125dp"
            android:text="@string/target_distance"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ConfigMessage" />

        <EditText
            android:id="@+id/TargetDistance"
            android:layout_width="197dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:afterTextChanged="@{(text) -> viewModel.setTargetDistance(text)}"
            android:ems="10"
            android:hint="@string/target_distance"
            android:inputType="number|numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@{viewModel.tDistance}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TargetDistanceMessage" />

        <Spinner
            android:id="@+id/TargetDistanceUnit"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.661"
            app:layout_constraintStart_toEndOf="@+id/TargetDistance"
            app:layout_constraintTop_toBottomOf="@+id/TargetDistanceMessage" />

        <Button
            android:id="@+id/button"
            android:layout_width="368dp"
            android:layout_height="62dp"
            android:layout_marginBottom="57dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>